build/k8s/manifest-cloudflared.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          args:
            - "tunnel"
            - "--no-autoupdate"
            - "run"
          volumeMounts:
            - name: config
              mountPath: /etc/cloudflared/config
      volumes:
        - name: config
          configMap:
            name: cloudflared-config
