build/k8s/manifest-newrelic.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nri-bundle-newrelic-infrastructure
  namespace: default
spec:
  selector:
    matchLabels:
      app: newrelic-infrastructure
  template:
    metadata:
      labels:
        app: newrelic-infrastructure
        app.kubernetes.io/name: newrelic-infrastructure
        release: nri-bundle
    spec:
      serviceAccountName: nri-bundle-newrelic-infrastructure
      containers:
      - name: newrelic-infrastructure
        image: newrelic/infrastructure:latest
