build/k8s/manifest-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-hexagonal-api-__database__-__environment__
  name: go-hexagonal-api-__database__-__environment__
spec:
  replicas: 1
  progressDeadlineSeconds: 240
  selector:
    matchLabels:
      app: go-hexagonal-api-__database__-__environment__
  template:
    metadata:
      labels:
        app: go-hexagonal-api-__database__-__environment__
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
        searches:
          - default.svc.cluster.local
      containers:
        - image: __ghcr__/go-hexagonal-api:__version__
          imagePullPolicy: Always
          name: go-hexagonal-api-__database__-__environment__
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-hexagonal-api-__database__-__environment__
spec:
  type: ClusterIP
  selector:
    app: go-hexagonal-api-__database__-__environment__
  ports:
    - name: http
      port: __port__
      targetPort: __port__
